			SWI-Prolog ChangeLog
			====================

VERSION 5.0.6 (May 15, 2002)
============================

  * ADDED: type-check on 2nd argument of absolute_file_name/2 as well as
    a new option expand(Boolean) to control expanding meta-characters.

  * FIXED: MT: At halt/0, joint threads that are already terminated rather
    than canceling them.

  * FIXED: MT: avoid race-conditions in atom-garbage collection when creating
    new threads or threads are about to end.  Patch by Sergey Tikhonov.
    Thanks!

  * FIXED: expand_file_name/2 to return directories again.

  * FIXED: module(Module) argument of read_term/[2,3], fixing GUI-Tracer
    problems when using local operator-declarations.

  * PORT: pl.spec (building RPMS) to follow current standards.
    By Michel Alexandre Salim.

  * FIXED: Choicepoint-view of GUI tracer.

  * PORT: Added -fno-strict-aliasing when compiling using gcc, needed for
    gcc-3 (Lourens van der Meij)

  * PERFORMANCE: Allow a certain (16%) amount of `dirty' clauses
    in a predicate, also if the reference-count is 0 when starting a retract.
    This makes a *tremendous* difference retracting 60,000 facts from a
    predicate holding almost 600,000 facts.

  * FIXED: GUI-tracer source-location problems with (If->Then).

  * FIXED: PLWIN.EXE getting into a loop after using Page Up/Down buttons.
    Yair Greenberg.

  * FIXED: qsave_program/2: properly handle small and 0 (= max) stack-size
    specification.  Detmar Meurers.

  * FIXED: Flush user_output before query/error messages in the toplevel,
    avoiding confusion due to stream-buffering for more simple cases.
    Martin Sondergaard.

  * FIXED: Correctly perform unquoted write on atoms starting with a 0-byte.
    Mike Elston.

  * FIXED: make exists_file/1 and exists_directory/1 properly say no if the
    filesystem object is not of the right type.  Dr. Werner Wolff.

  * ADDED: Windows: mkboot.bat script to the bin-directory to easily redo
    the boot-compilation.
